# serverless-rust

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml
src/: main.rs
