[package]
name = "serverless-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "^0.54"
aws-sdk-dynamodb = "^0.24"
tokio = { version = "1" , features = ["full"] } 
lambda_runtime = "^0.7"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^4.0"
uuid = { version = "^1.3", features = ["v4"] }
